# Valhalla-timedist-hs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.scotty  Dockerfile.servant  README.md  cabal.project  cabal.project.freeze  docker-compose.yml  flake.nix  package.yaml  runme.sh  valhalla-timedist-hs.cabal  valhalla.json
.github/workflows/: ci.yml
app/: Main.hs
config/: valhalla.json
src/: Lib.hs  Logging.hs  Server.hs  Types.hs  ValhallaClient.hs
src/API/: Api.hs  Handlers.hs
src/Types/: API.hs  Config.hs  Domain.hs  Valhalla.hs
src/Valhalla/: Client.hs
test/: MockValhalla.hs  PropSpec.hs  Spec.hs  TypesSpec.hs  _tester.py
test/API/: HandlersSpec.hs
