cabal-version: 2.2

name:           valhalla-timedist-hs
version:        0.1.0.0
author:         Real Limoges
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/real-limoges/valhalla-timedist-hs

library
  exposed-modules:
      Lib
      ValhallaClient
  other-modules:
      Paths_valhalla_timedist_hs
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , lens
    , scotty
    , text
    , vector
    , wreq
  default-language: Haskell2010

executable valhalla-timedist-hs-exe
  main-is: Main.hs
  other-modules:
      Lib
      ValhallaClient
      Paths_valhalla_timedist_hs
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      app
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , lens
    , scotty
    , text
    , valhalla-timedist-hs
    , vector
    , wreq
  default-language: Haskell2010

test-suite valhalla-timedist-hs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_valhalla_timedist_hs
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , lens
    , scotty
    , text
    , valhalla-timedist-hs
    , vector
    , wreq
  default-language: Haskell2010
