cabal-version: 2.2

name:           valhalla-timedist-hs
version:        0.1.0.0
author:         Real Limoges
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/real-limoges/valhalla-timedist-hs

library
  exposed-modules:
      Lib
      ValhallaClient
      Types
  other-modules:
      Paths_valhalla_timedist_hs
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      src
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wpartial-fields
               -Wredundant-constraints
               -threaded
               -rtsopts
               -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.21 && <5
    , bytestring
    , http-conduit
    , scotty
    , text
    , vector
  default-language: GHC2024

executable valhalla-timedist-hs-exe
  main-is: Main.hs
  other-modules:
      Lib
      ValhallaClient
      Types
      Paths_valhalla_timedist_hs
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      app
      src
  ghc-options: -O2
               -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wpartial-fields
               -Wredundant-constraints
               -threaded
               -rtsopts
               -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.21 && <5
    , bytestring
    , http-conduit
    , scotty
    , text
    , valhalla-timedist-hs
    , vector
  default-language: GHC2024

test-suite valhalla-timedist-hs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_valhalla_timedist_hs
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      test
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wpartial-fields
               -Wredundant-constraints
               -threaded
               -rtsopts
               -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.21 && <5
    , bytestring
    , http-conduit
    , scotty
    , text
    , valhalla-timedist-hs
    , vector
  default-language: GHC2024