cabal-version:  3.12
name:           valhalla-timedist-hs
version:        0.1.0.0
author:         Real Limoges
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/real-limoges/valhalla-timedist-hs


common shared-properties
  default-language: GHC2024
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints
  build-depends:
      base >= 4.20 && < 5
    , aeson
    , async
    , bytestring
    , http-client
    , http-conduit
    , text
    , vector
    , servant
    , servant-server
    , warp
    , mtl
  default-extensions:
    OverloadedStrings
    DeriveAnyClass
    GeneralizedNewtypeDeriving

library
  import: shared-properties
  exposed-modules:
      Logging
      Server
      Types
      Types.API
      Types.Config
      Types.Domain
      Types.Valhalla
      API.Api
      API.Handlers
      Valhalla.Client
  other-modules:
      Paths_valhalla_timedist_hs
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      src
  build-depends:
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , time
    , transformers
    , wai
    , wai-extra

executable valhalla-timedist-hs-exe
  import: shared-properties
  main-is: Main.hs
  other-modules:
      Paths_valhalla_timedist_hs
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      app
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -O2
  build-depends:
      valhalla-timedist-hs

test-suite valhalla-timedist-hs-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_valhalla_timedist_hs
      MockValhalla
      TypesSpec
      PropSpec
      API.HandlersSpec
  autogen-modules:
      Paths_valhalla_timedist_hs
  hs-source-dirs:
      test
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  build-depends:
      valhalla-timedist-hs
    , hspec
    , hspec-wai
    , http-types
    , QuickCheck
    , wai
    , wai-extra
    , network